# chatbot-frontend-template

./: Makefile  README.md  next.config.ts  package-lock.json  package.json  tsconfig.json
.github/: copilot-instructions.md
docs/: AUTHENTICATION_SUMMARY.md  DEV_GRAPH_SETUP.md  LANGGRAPH_STREAMING_PROTOCOL.md  LANGGRAPH_TO_THREAD.md  RESOURCE_MANAGEMENT_COMPLETE.md  RESOURCE_MANAGEMENT_FRONTEND.md  VERCEL_AI_STREAM_PROTOCOL.md  api-draft.md  backend-api-contract.md  backend-authentication.md
mock-backend/: .gitignore  README.md  env.sample  main.py  pyproject.toml
mock-backend/agent/: graph.py  model.py  tools.py
mock-backend/orchestration/: file_indexing.py
mock-backend/routes/: chat_conversation.py  file_indexing.py
mock-backend/utils/: stream_protocol.py  uuid.py
mock-langgraph-server/: .gitignore  README.md  __types__.py  auth.py  database.py  env.sample  graph.py  main.py  pyproject.toml  start.sh  test.py  tools.py
mock-langgraph-server/agent/: graph.py  model.py  tools.py
mock-langgraph-server/orchestration/: __init__.py  file_indexing.py
mock-langgraph-server/routes/: chat_conversation.py  file_indexing.py
mock-langgraph-server/utils/: stream_protocol.py
mock-server/: .gitignore  README.md  db.ts  mock-responses.ts  package.json  server.ts
public/: manifest.json  robots.txt
src/: auth.ts  middleware.ts
src/app/: error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx
src/components/: AssistantMessage.tsx  AuthLayout.tsx  ChatHeader.tsx  ChatInput.tsx  ChatMessageSkeleton.tsx  ChatSearch.tsx  ChatSkeleton.tsx  CodeBlock.tsx  (+18 more)
(+57 files in other folders)
